[B]Retrospect v4.1.8.15 - Changelog - 2019-04-19[/B]

!! Due to the changing of the add-on ID, there is an extra add-on data migration step required. This happens as soon as you install the new version. !!

[B]Framework related[/B]
- Added: option to pass the manifest update mode to the InputStream Adaptive add-on for M3u8 streams
- Fixed: rebuild channel index if the ChannelSet path is not consistent with the add-on path

[B]GUI/Settings/Language related[/B]
* Added: translation for "Recent"

[B]Channel related[/B]
-